Update What to Expect layout: 1-2 top row, 3-4 bottom row, centered text in colored boxes

--- a/public/index.html
+++ b/public/index.html
@@ -175,25 +175,29 @@
         <div class="session-process">
           <h3>What to Expect</h3>
           <div class="process-steps">
-            <div class="process-step">
-              <div class="step-number">1</div>
-              <h4>Discovery & Attunement</h4>
-              <p>We begin with warm hugs and a brief guided meditation to help ground and attune our energy. We'll explore your desires, boundaries, and set an intention for the session.</p>
+            <div class="process-row">
+              <div class="process-step">
+                <div class="step-number">1</div>
+                <h4>Discovery & Attunement</h4>
+                <p>We begin with warm hugs and a brief guided meditation to help ground and attune our energy. We'll explore your desires, boundaries, and set an intention for the session.</p>
+              </div>
+              <div class="process-step">
+                <div class="step-number">2</div>
+                <h4>Sensual Touch</h4>
+                <p>Sessions begin with sensual touch of your back and buttocks. As desired, I'll use my hands, breasts, and body weight to ease you into relaxation.</p>
+              </div>
             </div>
-            <div class="process-step">
-              <div class="step-number">2</div>
-              <h4>Sensual Touch</h4>
-              <p>Sessions begin with sensual touch of your back and buttocks. As desired, I'll use my hands, breasts, and body weight to ease you into relaxation.</p>
-            </div>
-            <div class="process-step">
-              <div class="step-number">3</div>
-              <h4>Sacred Surrender</h4>
-              <p>As your body releases into surrender, we transition with your full consent to deeper healing work. Throughout, I serve as a channel for divine love and healing energy.</p>
-            </div>
-            <div class="process-step">
-              <div class="step-number">4</div>
-              <h4>Integration & Aftercare</h4>
-              <p>We close with nurturing aftercare—resting together, gentle holding, allowing the energy to integrate into your being.</p>
+            <div class="process-row">
+              <div class="process-step">
+                <div class="step-number">3</div>
+                <h4>Sacred Surrender</h4>
+                <p>As your body releases into surrender, we transition with your full consent to deeper healing work. Throughout, I serve as a channel for divine love and healing energy.</p>
+              </div>
+              <div class="process-step">
+                <div class="step-number">4</div>
+                <h4>Integration & Aftercare</h4>
+                <p>We close with nurturing aftercare—resting together, gentle holding, allowing the energy to integrate into your being.</p>
+              </div>
             </div>
           </div>
         </div>
