Make service cards clickable to auto-select in booking form

--- a/public/index.html
+++ b/public/index.html
@@ -203,38 +203,38 @@
         </div>
 
         <div class="services-grid">
-          <div class="service-card">
+          <div class="service-card" data-service-id="video-coaching" style="cursor: pointer;" title="Click to select this service">
             <div class="service-price">$111</div>
             <h3>Tantric Coaching</h3>
             <p class="service-duration">30 minutes • Video Call</p>
             <p>A brand new offering, especially for people who can't meet in person. Connect, explore, and receive guidance from wherever you are.</p>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-id="angel-session" style="cursor: pointer;" title="Click to select this service">
             <div class="service-price">$333</div>
             <h3>"Angel" Session</h3>
             <p class="service-duration">1 hour • In Person</p>
             <p>For those needing more frequent loving care or experiencing scarcity. While shorter, I will do my best to guide you into sacred surrender. 🙌🙏😇</p>
           </div>
-          <div class="service-card featured">
+          <div class="service-card featured" data-service-id="standard-session" style="cursor: pointer;" title="Click to select this service">
             <div class="service-badge">Most Popular</div>
             <div class="service-price">$444</div>
             <h3>Standard Session</h3>
             <p class="service-duration">90 minutes • In Person</p>
             <p>Typically gives enough time to enjoy and not rush the ritual, with time for the full experience though less aftercare.</p>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-id="extended-session" style="cursor: pointer;" title="Click to select this service">
             <div class="service-price">$555</div>
             <h3>Extended Session</h3>
             <p class="service-duration">2 hours • In Person</p>
             <p>The length I was originally trained to give—time to attune our energy, enjoy aftercare, integrate, and connect more deeply. 💗</p>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-id="couples-session" style="cursor: pointer;" title="Click to select this service">
             <div class="service-price">$666</div>
             <h3>Couples Session</h3>
             <p class="service-duration">2 hours • In Person</p>
             <p>A sacred experience for couples to explore together, deepen connection, and share in healing energy. 💕💕</p>
           </div>
-          <div class="service-card">
+          <div class="service-card" data-service-id="duo-session" style="cursor: pointer;" title="Click to select this service">
             <div class="service-price">$777</div>
             <h3>Duo Session</h3>
             <p class="service-duration">2 hours • In Person</p>
