Add tip jar feature with Venmo integration
- Elegant tip jar section with preset amounts (, , , custom)
- Beautiful circular buttons with gradient backgrounds and hover effects
- Venmo deep links pre-fill payment amount and thank-you note
- Mobile responsive design
- Placed before footer on main client page

--- a/public/index.html
+++ b/public/index.html
@@ -656,6 +656,35 @@
         </div>
       </div>
     </section>
+    <!-- Tip Jar Section -->
+    <section id="tip-jar" class="tip-jar-section" aria-labelledby="tip-jar-title">
+      <div class="container">
+        <div class="tip-jar-content">
+          <div class="tip-jar-icon" aria-hidden="true">💝</div>
+          <h2 id="tip-jar-title">Show Your Appreciation</h2>
+          <p class="tip-jar-text">If your session moved you deeply, you're welcome to leave a tip as a token of gratitude. Tips are never expected, but always received with heartfelt thanks.</p>
+          <div class="tip-buttons">
+            <a href="https://venmo.com/ravishingRavi77?txn=pay&amount=20&note=Thank%20you%20for%20the%20healing%20%F0%9F%8C%B9" target="_blank" rel="noopener" class="tip-btn tip-btn-small">
+              <span class="tip-amount">$20</span>
+              <span class="tip-label">Grateful</span>
+            </a>
+            <a href="https://venmo.com/ravishingRavi77?txn=pay&amount=50&note=Thank%20you%20for%20the%20healing%20%F0%9F%8C%B9" target="_blank" rel="noopener" class="tip-btn tip-btn-medium">
+              <span class="tip-amount">$50</span>
+              <span class="tip-label">Touched</span>
+            </a>
+            <a href="https://venmo.com/ravishingRavi77?txn=pay&amount=100&note=Thank%20you%20for%20the%20healing%20%F0%9F%8C%B9" target="_blank" rel="noopener" class="tip-btn tip-btn-large">
+              <span class="tip-amount">$100</span>
+              <span class="tip-label">Transformed</span>
+            </a>
+            <a href="https://venmo.com/ravishingRavi77?txn=pay&note=Thank%20you%20for%20the%20healing%20%F0%9F%8C%B9" target="_blank" rel="noopener" class="tip-btn tip-btn-custom">
+              <span class="tip-amount">Custom</span>
+              <span class="tip-label">Your Choice</span>
+            </a>
+          </div>
+          <p class="tip-note">🔐 Secure payment via Venmo</p>
+        </div>
+      </div>
+    </section>
     </main>
 
     <!-- Footer -->
